<resources>
    <string name="app_name">Ai Image Generator</string>

    <!--New Password Activity-->
    <string name="backbtn">backBtn</string>
    <string name="create_new_password">Create new password</string>
    <string name="pwd_detail_text">Create your new password if you forget it.</string>
    <string name="new_password">New Password</string>
    <string name="password_hint">********</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="continue_btn">Continue</string>


    <!--OnBoarding Activity One, Two, Three-->
    <string name="girlimage">girlImage</string>
    <string name="onboading_text1">Turn your words into\nartwork instantly</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="bearimage">bearImage</string>
    <string name="onboarding_text3">Unleash your creative\nideas with saved art</string>
    <string name="get_started">Get Started</string>
    <string name="artimage">artImage</string>
    <string name="onboarding_text2">Create and share your\nartwork with ease</string>

    <!--Otp Code Verification Activity-->
    <string name="otp_code_verification">OTP code verification</string>
    <string name="otp_detail_text">We have send an otp code to your email\nand*****@gmail.com Enter the otp code below to verify</string>
    <string name="don_t_receive_email">Don\'t receive Email?</string>
    <string name="you_can_resend_code_in">You can resend code in </string>
    <string name="s">s</string>
    <string name="_timer">00</string>

    <!--Reset Password Activity-->
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="please_enter_your_email_to_get_otp">please enter your email to get OTP</string>
    <string name="email">Email</string>

    <!--Sign In With Password Activity-->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_detail_text"><![CDATA[please enter your email & password to sign in]]></string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="googlebtn">googleBtn</string>
    <string name="facebookbtn">facebookBtn</string>
    <string name="twitterbtn">twitterBtn</string>
    <string name="applebtn">appleBtn</string>
    <string name="sign_in">Sign in</string>

    <!--Sign In Activity-->
    <string name="welcome_let_s_dive_in_into_your_account">Welcome let’s dive in into your account!</string>
    <string name="continue_with_google">continue with Google</string>
    <string name="continue_with_apple">continue with Apple</string>
    <string name="continue_with_facebook">continue with Facebook</string>
    <string name="continue_with_twitter">continue with Twitter</string>

    <!--Dialog-->
    <string name="dialog_text">please wait....\nyou will be directed to the homepage</string>

    <!--Sign Up Activity-->
    <string name="hello_there">Hello there</string>
    <string name="sign_up_text"><![CDATA[Please enter your email & password\nto create an account.]]></string>
    <string name="i_agree_to_term_amp_privacy_policy"><![CDATA[I agree to Term & Privacy Policy]]></string>

    <!--Personal Info Activity-->
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_92_3000000000">+92 3000000000</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="finish">Finish</string>
    <string name="personal_info_text_detail">please enter your profile don’t worry only\nyou can see your personal data no one else\nwill be able to see it. or you can skip it for\nnow</string>
    <string name="enter_personal_info">Enter personal info</string>
    <string-array name="gender_name">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--Home fragment-->
    <string name="logo">logo</string>
    <string name="create_a_visions_with_ai">create a visions with AI</string>
    <string name="what_visions_are_you_bringing_to_life_today">What visions are you bringing to life today!</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="square">Square</string>
    <string name="portrait">Portrait</string>
    <string name="landsacpe">Landsacpe</string>
    <string name="select_style">Select Style</string>
    <string name="no_style">No style</string>
    <string name="euphoric">Euphoric</string>
    <string name="tattoo">Tattoo</string>
    <string name="_3d_game">3D Game</string>
    <string name="generate">Generate</string>
    <string name="watch_an_ad">Watch an ad</string>


    <!--Saved fragment-->
    <string name="anime_v2">Anime V2</string>
    <string name="saved">Saved</string>

    <!--Permission Activity-->
    <string name="gtand_permissions_to_start_app">Gtand permissions to start app</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="start">Start</string>
    <string name="title_activity_language">LanguageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>